vlib/v/checker/tests/noreturn_with_non_empty_loop_at_end.vv
[noreturn]
fn another() {
	eprintln(@FN)
	for {
		break
	}
}

[noreturn]
fn abc() {
	eprintln(@FN)
	another()
}

fn main() {
	eprintln('start')
	abc()
	eprintln('done')
}
